web commit by EthanGlasserCamp: another RFE

--- a/doc/index/discussion.mdwn
+++ b/doc/index/discussion.mdwn
@@ -28,3 +28,7 @@ Some questions about the RecentChanges function.
 * Lastly, would it be possible to use the recent changes code with a pagespec? I understand this sort of infringes on territory covered by the inline plugin, but the inline plugin only puts a page in the RSS feed once, when it's created, and I imagine some people -- some deranged, obsessive-compulsive people like myself -- would like to know about the changes made to existing pages as well as newly-created pages.
 
 Thanks for your time. -- Ethan
+
+----
+
+Also, I'd like to request another template parameter which is just $config{url}. That way you won't have to hard-code the URL of the wiki into the template. -- Ethan
