web commit by EthanGlasserCamp: now that at least a few things work right

--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -27,6 +27,7 @@ Sites that are using ikiwiki include:
 * LinuxWorld.com [monkey.linuxworld.com](https://monkey.linuxworld.com/) contributor wiki (git backend)
 * Stefano Zacchiroli's [blog](http://www.bononia.it/~zack/blog/)
 * [Taquiones](http://taquiones.net): my personal website in spanish
+* [betacantrips](http://www.betacantrips.com/), the personal website of Ethan Glasser-Camp
 
 Please feel free to add your own ikiwiki site!
 
