web commit by EthanGlasserCamp: Oops! This doesn't work at all.

--- a/doc/todo/toplevel_index.mdwn
+++ b/doc/todo/toplevel_index.mdwn
@@ -41,3 +41,6 @@ Some inconsistences around the toplevel [[index]] page:
 > rather than a foo/bar/index.html, as is (to my mind) traditional.
 > 
 > Ethan
+>
+> Hmm, now I've had time to think about this, and this does conflict pretty hard with foo.html/Discussion 
+> pages. Well, back to the drawing board.
