web commit by EthanGlasserCamp: more demanding, unreasonable thoughts about this -- I want a pony

--- a/doc/todo/toplevel_index.mdwn
+++ b/doc/todo/toplevel_index.mdwn
@@ -44,3 +44,9 @@ Some inconsistences around the toplevel [[index]] page:
 >
 > Hmm, now I've had time to think about this, and this does conflict pretty hard with foo.html/Discussion 
 > pages. Well, back to the drawing board.
+>
+> Well, it seems unlikely that you'll have both foo/bar.html and foo/bar/index.html, 
+> so why not accept either as foo/bar? This would both preserve backwards
+> compatibility, as well as allow foo/bar/Discussion.
+>
+> Ethan
