* Patch from Paul Tötterman to use CP in the Makefile.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ikiwiki (1.29) UNRELEASED; urgency=low
+
+  * Patch from Paul Tötterman to use CP in the Makefile.
+
+ -- Joey Hess <joeyh@debian.org>  Thu, 28 Sep 2006 19:10:58 -0400
+
 ikiwiki (1.28) unstable; urgency=low
 
   * inline: Add ability to sort by page name, based on a patch from
