--- a/doc/plugins/contrib/googlemaps.mdwn
+++ b/doc/plugins/contrib/googlemaps.mdwn
@@ -1,9 +1,11 @@
+[[template id=plugin name=googlemaps author="Christian Mock"]]
+
 `googlemaps` is a plugin that allows using the [Google Maps API][2]
 from ikiwiki.
 
 [2]: http://www.google.com/apis/maps/
 
-the plugin supports importing GPS tracks from [gpx][1] files, reducing
+The plugin supports importing GPS tracks from [gpx][1] files, reducing
 the number of points in those tracks via [gpsbabel][2], and drawing
 them as an overlay on the map. the center of the map and zoom level
 can be calculated automatically.
@@ -11,6 +13,6 @@ can be calculated automatically.
 [1]: http://www.topografix.com/gpx.asp
 [2]: http://www.gpsbabel.org/
 
-it can be [found here][3].
+It can be [found here][3].
 
 [3]: http://www.tahina.priv.at/hacks/googlemaps.html
