--- a/doc/plugins/contrib/googlemaps.mdwn
+++ b/doc/plugins/contrib/googlemaps.mdwn
@@ -1,4 +1,5 @@
 [[template id=plugin name=googlemaps author="Christian Mock"]]
+[[tag special-purpose]]
 
 `googlemaps` is a plugin that allows using the [Google Maps API][2]
 from ikiwiki.
