web commit by RecaiOktas: Using FindBin in ikiwiki.pl.

--- a/doc/bugs/svn_post-commit_wrapper_can__39__t_find_IkiWiki.pm_if_not_installed.mdwn
+++ b/doc/bugs/svn_post-commit_wrapper_can__39__t_find_IkiWiki.pm_if_not_installed.mdwn
@@ -1,3 +1,10 @@
 If you're using ikiwiki without installing it, the svn post-commit wrapper will die (in a difficult-to-debug way) when it tries to execute ikiwiki.pl because it can't find IkiWiki.pm.
 
 I'm not sure how to fix this in a secure way. For now I'm just changing use lib '.' in ikiwiki.pl to point to the hard-coded directory where ikiwiki was unpacked.
+
+> This workaround doesn't work here.  "`./ikiwiki.pl --setup ikiwiki.setup`" is ok, but the
+> wrappers fail in action.  The below patch seems fine (only the relevant part). --[[Roktas]]
+
+    -use lib '.'; # For use without installation, removed by Makefile.
+    +use FindBin qw($Bin); # WILL_BE_REMOVED by Makefile.
+    +use lib ($Bin=~/(.+)/ ? "$1" : '.'); # For use without installation, WILL_BE_REMOVED by Makefile.
