web commit by icerain321: add a link

--- a/doc/index.mdwn
+++ b/doc/index.mdwn
@@ -30,3 +30,4 @@ Thanks! --[[Joey]]
 All wikis are supposed to have a [[SandBox]], so this one does too.
 
 ikiwiki is developed by [[Joey]] and is [[FreeSoftware]].
+[9lover](http://www.9lover.com)
