web commit by ChristianMock

--- a/doc/plugins/contrib/img.mdwn
+++ b/doc/plugins/contrib/img.mdwn
@@ -8,4 +8,4 @@ tag, and `alt` text can be specified.
 
 the plugin uses the ImageMagick tools via PerlMagick.
 
-it can be found [here|http://www.tahina.priv.at/hacks/img.html].
+it can be found [here](http://www.tahina.priv.at/hacks/img.html).
