--- a/doc/plugins/contrib/img.mdwn
+++ b/doc/plugins/contrib/img.mdwn
@@ -1,3 +1,6 @@
+[[template id=plugin name=img author="Christian Mock"]]
+[[tag chrome]]
+
 `img` is an enhanced image handling plugin.
 
 the intention is to make image handling as easy as possible, so the
