web commit by SteveRobbins

--- a/doc/bugs/Problems_using_cygwin.mdwn
+++ b/doc/bugs/Problems_using_cygwin.mdwn
@@ -1,6 +1,6 @@
 I'd like to run ikiwiki under cygwin.  I'm new to ikiwiki and have tried to follow the setup tutorial as best I could.  I got all the way up to step 7, but I can't get the CGI to run successfully (step 8).
 
-After editing ikiwiki.setup, and running "ikiwiki --setup", the CGI script is successfully created.  However, if I then click on "Edit Page" link, I see
+After editing ikiwiki.setup, and running "ikiwiki --setup", the CGI script is successfully created.  However, if I then click on "Edit Page" link, I see nothing in the browser and the following in the logs:
 
 <pre>
 ==> /var/log/apache2/access_log <==
