--- a/debian/NEWS
+++ b/debian/NEWS
@@ -1,8 +1,21 @@
+ikiwiki (1.29) unstable; urgency=low
+
+  Wikis need to be rebuilt on upgrade to this version. If you listed your wiki
+  in /etc/ikiwiki/wikilist this will be done automatically when the Debian
+  package is upgraded. Or use ikiwiki-mass-rebuild to force a rebuild.
+
+  There is a change to the plugin interface in this version. Plugins that use
+  %renderedfiles will need to be updated, as the hash's values are now arrays
+  of rendered files. Plugins that cause a page to render additional files
+  should use the new will_render function to register the files.
+
+ -- Joey Hess <joeyh@debian.org>  Sun,  8 Oct 2006 17:27:56 -0400
+
 ikiwiki (1.22) unstable; urgency=low
   
   Due to some changes in the CSS, wikis should be rebuilt on upgrade to this
   version. If you listed your wiki in /etc/ikiwiki/wikilist this will be done
-  automatically when the Debian package is upgraded. Or use ikiiki-mass-rebuild
+  automatically when the Debian package is upgraded. Or use ikiwiki-mass-rebuild
   to force a rebuild.
 
   If you have modified versions of ikiwiki's html templates, you will need
