--- a/doc/bugs/rss_feed_cleanup_on_delete.mdwn
+++ b/doc/bugs/rss_feed_cleanup_on_delete.mdwn
@@ -2,3 +2,5 @@ If a page stops inlining anthing, its rss feed file will linger around and
 not be deleted.
 
 (The linkmap plugin has the same problem with the png files it creates.)
+
+[[bugs/done]]
