--- a/debian/changelog
+++ b/debian/changelog
@@ -9,10 +9,12 @@ ikiwiki (1.29) UNRELEASED; urgency=low
     source file, to allow tracking of extra rendered files like rss feeds.
   * Note that plugins that accessed this variable will need to be updated!
     The plugin interface has been increased to version 1.01 for this change.
+    As few plugins use %renderedfiles I haven't done anything else to ensure
+    compatability of old plugins.
   * Add will_render function to the plugin interface, used to register that a
-    page renders a destination file, and do some security checks.
+    page renders a destination file, and do some security checks. Previously
+    but no longer rendered files will be cleaned up.
   * Use will_render in the inline and linkmap plugins.
-  * Previously but no longer rendered files will be cleaned up.
   * You will need to rebuild your wiki on upgrade to this version.
 
  -- Joey Hess <joeyh@debian.org>  Sun,  8 Oct 2006 16:53:17 -0400
