responses and reorg

--- a/doc/index/discussion.mdwn
+++ b/doc/index/discussion.mdwn
@@ -21,14 +21,14 @@ something, that I think is very valuable.
 
 ----
 
-Some questions about the RecentChanges function. 
+Some questions about the RecentChanges function. -- Ethan
 
-* Why isn't it statically-genereated, but generated dynamically by CGI? It seems like it could be beneficial to have it rendered in the post-commit hook, just like everything else in the wiki. 
-* Also, is it planned/desired that recent changes generate the same information in RSS feed format? This seems like it could be a useful way to keep track of the wiki as a whole. 
-* Lastly, would it be possible to use the recent changes code with a pagespec? I understand this sort of infringes on territory covered by the inline plugin, but the inline plugin only puts a page in the RSS feed once, when it's created, and I imagine some people -- some deranged, obsessive-compulsive people like myself -- would like to know about the changes made to existing pages as well as newly-created pages.
-
-Thanks for your time. -- Ethan
+> (Moved to [[todo/recentchanges]] --[[Joey]])
 
 ----
 
-Also, I'd like to request another template parameter which is just $config{url}. That way you won't have to hard-code the URL of the wiki into the template. -- Ethan
+Also, I'd like to request another template parameter which is just
+$config{url}. That way you won't have to hard-code the URL of the wiki into
+the template. -- Ethan
+
+> That's already available in the BASEURL parameter. --[[Joey]]
