* Atom feed support based on a patch by Clint Adams. * Add feeds=no option to inline preprocessor directive to turn off all types   of feeds. feeds=rss will still work, and feeds=atom was also added, for   fine control. * $IkiWiki::version now holds the program version, and is accessible to   plugins.

--- a/doc/features.mdwn
+++ b/doc/features.mdwn
@@ -50,7 +50,7 @@ program, or other special file and link to it from your wiki pages.
 
 You can turn any page in the wiki into a [[blog]]. Pages matching a
 specified [[PageSpec]] will be displayed as a weblog within the blog
-page. And an RSS feed can be generated to follow the blog.
+page. And RSS or Atom feeds can be generated to follow the blog.
 
 Ikiwiki's own [[TODO]], [[news]], and [[plugins]] pages are good examples
 of some of the flexible ways that this can be used.
@@ -90,7 +90,7 @@ incomplete list of some of them.
 
 You can tag pages and use these tags in various ways. Tags will show
 up in the ways you'd expect, like at the bottom of pages, in blogs, and
-in rss feeds.
+in RSS and Atom feeds.
 
 ### [[SubPages|SubPage]]
 
