--- a/doc/plugins/write.mdwn
+++ b/doc/plugins/write.mdwn
@@ -201,6 +201,9 @@ use the following hashes, using a page name as the key:
   reference.
 * `%pagesources` contains the name of the source file for a page.
 
+Also, the %IkiWiki::version variable contains the version number for the
+ikiwiki program.
+
 ### Library functions
 
 #### `hook(@)`
