--- a/debian/changelog
+++ b/debian/changelog
@@ -16,8 +16,14 @@ ikiwiki (1.29) UNRELEASED; urgency=low
     but no longer rendered files will be cleaned up.
   * Use will_render in the inline and linkmap plugins.
   * You will need to rebuild your wiki on upgrade to this version.
+  * Atom feed support based on a patch by Clint Adams.
+  * Add feeds=no option to inline preprocessor directive to turn off all types
+    of feeds. feeds=rss will still work, and feeds=atom was also added, for
+    fine control.
+  * $IkiWiki::version now holds the program version, and is accessible to
+    plugins.
 
- -- Joey Hess <joeyh@debian.org>  Sun,  8 Oct 2006 16:53:17 -0400
+ -- Joey Hess <joeyh@debian.org>  Sun,  8 Oct 2006 18:36:30 -0400
 
 ikiwiki (1.28) unstable; urgency=low
 
