--- a/doc/plugins/tag.mdwn
+++ b/doc/plugins/tag.mdwn
@@ -8,7 +8,8 @@ This plugin allows tagging pages. List tags as follows:
 The tags work the same as if you had put a (hidden) [[WikiLink]] on the page
 for each tag, so you can use a [[PageSpec]] match all pages that are
 tagged with a given tag, for example. The tags will also show up on blog
-entries and at the bottom of the tagged pages, as well as in rss feeds.
+entries and at the bottom of the tagged pages, as well as in RSS and Atom
+feeds.
 
 This plugin has a configuration option. Set --tagbase=tag and links to tags
 will be located under the specified base page. If ikiwiki is configured
