--- a/doc/templates.mdwn
+++ b/doc/templates.mdwn
@@ -18,6 +18,8 @@ It ships with some basic templates which can be customised:
   generate the mail with the user's password in it.
 * `rsspage.tmpl` - Used for generating rss feeds for [[blog]]s.
 * `rssitem.tmpl` - Used for generating individual items on rss feeds.
+* `atompage.tmpl` - Used for generating atom feeds for [[blog]]s.
+* `atomitem.tmpl` - Used for generating individual items on atom feeds.
 * `inlinepage.tmpl` - Used for adding a page inline in a blog
   page.
 * `inlinepagetitle.tmpl` - Used for listing a page inline in a blog
@@ -25,8 +27,8 @@ It ships with some basic templates which can be customised:
 * `estseek.conf` - Not a html template, this is actually a template for
   a config file for the [[HyperEstraier]] search engine. If you like you
   can read the [[HyperEstraier]] docs and configure it using this.
-* `blogpost.tmpl` - Used for a form to add a post to a blog (and a rss link)
-* `rsslink.tmpl` - Used to add a rss link if blogpost.tmpl is not used.
+* `blogpost.tmpl` - Used for a form to add a post to a blog (and a rss/atom links)
+* `feedlink.tmpl` - Used to add rss/atom links if blogpost.tmpl is not used.
 * `aggregatepost.tmpl` - Used by the [[plugins/aggregate]] plugin to create
   a page for a post.
 * `searchform.tmpl` - Used by the [[plugins/search]] plugin to add a search
