--- a/debian/changelog
+++ b/debian/changelog
@@ -18,8 +18,7 @@ ikiwiki (1.29) UNRELEASED; urgency=low
   * You will need to rebuild your wiki on upgrade to this version.
   * Atom feed support based on a patch by Clint Adams.
   * Add feeds=no option to inline preprocessor directive to turn off all types
-    of feeds. feeds=rss will still work, and feeds=atom was also added, for
-    fine control.
+    of feeds.
   * $IkiWiki::version now holds the program version, and is accessible to
     plugins.
 
