web commit by SteveRobbins: Response with FormBuilder version and error string location.

--- a/doc/bugs/Problems_using_cygwin.mdwn
+++ b/doc/bugs/Problems_using_cygwin.mdwn
@@ -15,3 +15,7 @@ Can anyone decipher this for me?  I spent some time with cpan earlier today down
 
 > It would help to know what version of CGI::FormBuilder you have. Mine
 > (3.03.01) does not seem to contain this error message. --[[Joey]]
+
+I have version 3.0401 of CGI::FormBuilder -- the latest from CPAN.  If you are wondering about any other modules, the answer 
+is likely the same: the latest from CPAN.  And you're right: the error string in question does not appear in CGI::FormBuilder.  I found it in HTML::Template (version 2.8).
+
