web commit by GabrielFarrell: small grammar fix

--- a/doc/setup.mdwn
+++ b/doc/setup.mdwn
@@ -114,7 +114,7 @@ you through setting up a wiki that is stored in [[Subversion]], [[Git]],
    subversion configuration, and uncomment and edit the configuration for
    your chosen RCS.
 
-   Note that the default file has a block to configure an [[post-commit]] 
+   Note that the default file has a block to configure a [[post-commit]] 
    wrapper to update the wiki. You need to uncomment the related block for
    whatever RCS you use and comment out the other rcs blocks.
 
@@ -139,4 +139,4 @@ you through setting up a wiki that is stored in [[Subversion]], [[Git]],
    
    Then run `ikiwiki --setup ikiwiki.setup` again.
 
-10. Enjoy your new wiki! Add yourself to [[IkiWikiUsers]]
+10. Enjoy your new wiki! Add yourself to [[IkiWikiUsers]].
