--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -28,6 +28,7 @@ Sites that are using ikiwiki include:
 * Stefano Zacchiroli's [blog](http://www.bononia.it/~zack/blog/)
 * [Taquiones](http://taquiones.net): my personal website in spanish
 * [betacantrips](http://www.betacantrips.com/), the personal website of Ethan Glasser-Camp
+* Keith Packard's [homepage](http://keithp.com/) and blog.
 
 Please feel free to add your own ikiwiki site!
 
