--- a/debian/changelog
+++ b/debian/changelog
@@ -21,8 +21,9 @@ ikiwiki (1.29) UNRELEASED; urgency=low
     of feeds.
   * $IkiWiki::version now holds the program version, and is accessible to
     plugins.
+  * Make the aggregate plugin emphasize error messages.
 
- -- Joey Hess <joeyh@debian.org>  Sun,  8 Oct 2006 18:36:30 -0400
+ -- Joey Hess <joeyh@debian.org>  Fri, 13 Oct 2006 14:19:28 -0400
 
 ikiwiki (1.28) unstable; urgency=low
 
