--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ikiwiki (1.29) UNRELEASED; urgency=low
+ikiwiki (1.29) unstable; urgency=low
 
   * Patch from Paul Tötterman to use CP in the Makefile.
   * Patch from Alec Berryman adding a http_auth config item that allows
@@ -26,7 +26,7 @@ ikiwiki (1.29) UNRELEASED; urgency=low
     given changeset (to avoid large number of file changes excessively
     bloating the page).
 
- -- Joey Hess <joeyh@debian.org>  Fri, 13 Oct 2006 23:10:40 -0400
+ -- Joey Hess <joeyh@debian.org>  Fri, 13 Oct 2006 23:14:28 -0400
 
 ikiwiki (1.28) unstable; urgency=low
 
