* Add no_override parameter to hook(). * Add a shortcut plugin, inspired by Victor Moral's contributed shortcuts   plugin, but featuring a more ikiwiki-ish syntax and with shortcuts that   can be configured using a page in wiki.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+ikiwiki (1.30) UNRELEASED; urgency=low
+
+  * Add no_override parameter to hook().
+  * Add a shortcut plugin, inspired by Victor Moral's contributed shortcuts 
+    plugin, but featuring a more ikiwiki-ish syntax and with shortcuts that
+    can be configured using a page in wiki.
+
+ -- Joey Hess <joeyh@debian.org>  Sun, 15 Oct 2006 14:49:28 -0400
+
 ikiwiki (1.29) unstable; urgency=low
 
   * Patch from Paul Tötterman to use CP in the Makefile.
