--- a/doc/plugins/contrib/shortcuts.mdwn
+++ b/doc/plugins/contrib/shortcuts.mdwn
@@ -1,5 +1,10 @@
 [[template id=plugin name=shortcuts included=0 author="[[VictorMoral]]"]]
 [[tag type/format]]
+[[meta title"shortcuts (third-party plugin)"]]
+
+Note: This plugin is different than the "shortcut" plugin now included in
+ikiwiki. I'm leaving it here in case people prefer how this one works.
+--[[Joey]]
 
 *shortcuts* is a plugin for make external links easy in a ikiwiki page.
 It filter the raw source code, searching *wafl expresions* and replacing it
