--- a/doc/plugins/contrib/shortcuts/discussion.mdwn
+++ b/doc/plugins/contrib/shortcuts/discussion.mdwn
@@ -22,3 +22,6 @@ standard across wikis, this approach seems cleaner and easier to learn for
 ikiwiki users.
 
 --[[Joey]]
+
+Update: I've added a "shortcut" plugin that works as described above.
+--[[Joey]]
