--- a/doc/plugins/contrib/googlemaps.mdwn
+++ b/doc/plugins/contrib/googlemaps.mdwn
@@ -1,6 +1,6 @@
 [[template id=plugin name=googlemaps author="Christian Mock"]]
 [[tag special-purpose]]
-[[meta title"googlemaps (third-party plugin)"]]
+[[meta title="googlemaps (third-party plugin)"]]
 
 `googlemaps` is a plugin that allows using the [Google Maps API][2]
 from ikiwiki.
