--- a/doc/plugins/contrib/img.mdwn
+++ b/doc/plugins/contrib/img.mdwn
@@ -1,6 +1,6 @@
 [[template id=plugin name=img author="Christian Mock"]]
 [[tag chrome]]
-[[meta title"img (third-party plugin)"]]
+[[meta title="img (third-party plugin)"]]
 
 `img` is an enhanced image handling plugin.
 
