--- a/doc/plugins/contrib/linguas.mdwn
+++ b/doc/plugins/contrib/linguas.mdwn
@@ -1,5 +1,5 @@
 [[template id=plugin name=linguas author="Jordà Polo"]]
-[[meta title"linguas (third-party plugin)"]]
+[[meta title="linguas (third-party plugin)"]]
 
 Linguas
 =======
