--- a/doc/plugins/contrib/shortcuts.mdwn
+++ b/doc/plugins/contrib/shortcuts.mdwn
@@ -1,6 +1,6 @@
 [[template id=plugin name=shortcuts included=0 author="[[VictorMoral]]"]]
 [[tag type/format]]
-[[meta title"shortcuts (third-party plugin)"]]
+[[meta title="shortcuts (third-party plugin)"]]
 
 Note: This plugin is different than the "shortcut" plugin now included in
 ikiwiki. I'm leaving it here in case people prefer how this one works.
