--- a/doc/plugins/contrib/img.mdwn
+++ b/doc/plugins/contrib/img.mdwn
@@ -1,5 +1,5 @@
 [[template id=plugin name=img author="Christian Mock"]]
-[[tag chrome]]
+[[tag type/chrome]]
 [[meta title="img (third-party plugin)"]]
 
 `img` is an enhanced image handling plugin.
