--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -29,6 +29,7 @@ Sites that are using ikiwiki include:
 * [Taquiones](http://taquiones.net): my personal website in spanish
 * [betacantrips](http://www.betacantrips.com/), the personal website of Ethan Glasser-Camp
 * Keith Packard's [homepage](http://keithp.com/) and blog.
+* Christian Mock's [homepage](http://www.tahina.priv.at/).
 
 Please feel free to add your own ikiwiki site!
 
