--- a/doc/plugins/contrib/shortcuts/discussion.mdwn
+++ b/doc/plugins/contrib/shortcuts/discussion.mdwn
@@ -25,3 +25,11 @@ ikiwiki users.
 
 Update: I've added a "shortcut" plugin that works as described above.
 --[[Joey]]
+
+----
+
+Ops ! I'm late. Following your suggestions i'm rewriting my module and this morning it is functional. My apologies for don't reply. Should be discard my module ? 
+
+--[[VictorMoral]]
+
+
