--- a/doc/plugins/contrib/shortcuts/discussion.mdwn
+++ b/doc/plugins/contrib/shortcuts/discussion.mdwn
@@ -32,4 +32,9 @@ Ops ! I'm late. Following your suggestions i'm rewriting my module and this morn
 
 --[[VictorMoral]]
 
+Argh, sorry for the duplicate work.
 
+I think that any features this module has that are not in the version I
+wrote should be merged into mine, if possible.
+
+--[[Joey]]
