web commit by VictorMoral

--- a/doc/plugins/contrib/shortcuts/discussion.mdwn
+++ b/doc/plugins/contrib/shortcuts/discussion.mdwn
@@ -26,9 +26,7 @@ ikiwiki users.
 Update: I've added a "shortcut" plugin that works as described above.
 --[[Joey]]
 
-----
-
-Ops ! I'm late. Following your suggestions i'm rewriting my module and this morning it is functional. My apologies for don't reply. Should be discard my module ? 
+Update: Ops ! I'm late. Following your suggestions i'm rewriting my module and this morning it is functional. My apologies for don't reply. Should be discard my module ? 
 
 --[[VictorMoral]]
 
@@ -38,3 +36,7 @@ I think that any features this module has that are not in the version I
 wrote should be merged into mine, if possible.
 
 --[[Joey]]
+
+Ok, Joey. I'm working in it. I'll send a patch soon.
+
+--[[VictorMoral]]
