Fix support for --pingurl at the command line.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,12 @@
 ikiwiki (1.30) UNRELEASED; urgency=low
 
   * Add no_override parameter to hook().
-  * Add a shortcut plugin, inspired by Victor Moral's contributed shortcuts 
+  * Add a shortcut plugin, inspired by Victor Moral's contributed shortcuts
     plugin, but featuring a more ikiwiki-ish syntax and with shortcuts that
     can be configured using a page in wiki.
+  * Fix support for --pingurl at the command line.
 
- -- Joey Hess <joeyh@debian.org>  Sun, 15 Oct 2006 14:49:28 -0400
+ -- Joey Hess <joeyh@debian.org>  Mon, 16 Oct 2006 14:32:56 -0400
 
 ikiwiki (1.29) unstable; urgency=low
 
