--- a/debian/changelog
+++ b/debian/changelog
@@ -5,8 +5,10 @@ ikiwiki (1.30) UNRELEASED; urgency=low
     plugin, but featuring a more ikiwiki-ish syntax and with shortcuts that
     can be configured using a page in wiki.
   * Fix support for --pingurl at the command line.
+  * Fix a subtle bug in will_render that broke some builds, by only clearing
+    items from renderedfiles the first time per build.
 
- -- Joey Hess <joeyh@debian.org>  Mon, 16 Oct 2006 14:32:56 -0400
+ -- Joey Hess <joeyh@debian.org>  Mon, 16 Oct 2006 14:50:13 -0400
 
 ikiwiki (1.29) unstable; urgency=low
 
