--- a/debian/changelog
+++ b/debian/changelog
@@ -7,8 +7,11 @@ ikiwiki (1.30) UNRELEASED; urgency=low
   * Fix support for --pingurl at the command line.
   * Fix a subtle bug in will_render that broke some builds, by only clearing
     items from renderedfiles the first time per build.
+  * Wrap entire technortati ping operation in an eval to catch all possible
+    failure modes, after I observed a simple ->value crashing ikiwiki when
+    a ping failed.
 
- -- Joey Hess <joeyh@debian.org>  Mon, 16 Oct 2006 14:50:13 -0400
+ -- Joey Hess <joeyh@debian.org>  Mon, 16 Oct 2006 15:02:39 -0400
 
 ikiwiki (1.29) unstable; urgency=low
 
