web commit by joey

--- a/doc/sandbox.mdwn
+++ b/doc/sandbox.mdwn
@@ -8,7 +8,7 @@ Here's a paragraph.
 
 Here's another one with *emphasised* text.
 
-do ë characters work?
+do ë characters work? Sure.
 
 # Header
 
