--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ikiwiki (1.30) UNRELEASED; urgency=low
+ikiwiki (1.30) unstable; urgency=low
 
   * Add no_override parameter to hook().
   * Add a shortcut plugin, inspired by Victor Moral's contributed shortcuts
@@ -11,7 +11,7 @@ ikiwiki (1.30) UNRELEASED; urgency=low
     failure modes, after I observed a simple ->value crashing ikiwiki when
     a ping failed.
 
- -- Joey Hess <joeyh@debian.org>  Mon, 16 Oct 2006 15:02:39 -0400
+ -- Joey Hess <joeyh@debian.org>  Mon, 16 Oct 2006 15:17:38 -0400
 
 ikiwiki (1.29) unstable; urgency=low
 
