--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ikiwiki (1.31) UNRELEASED; urgency=low
+
+  * Patch from Pawel Tecza to cp -a the templates in the Makefile.
+
+ -- Joey Hess <joeyh@debian.org>  Tue, 17 Oct 2006 13:48:26 -0400
+
 ikiwiki (1.30) unstable; urgency=low
 
   * Add no_override parameter to hook().
