web commit by VictorMoral: Added information about style sheet and samples page

--- a/doc/plugins/contrib/syntax.mdwn
+++ b/doc/plugins/contrib/syntax.mdwn
@@ -26,7 +26,21 @@ or
 
        \[[syntax file="hello.pl" description="My first perl program"]]
 
-It can be downloaded from [here](http://taquiones.net/files/misc/IkiWiki-Plugin-syntax-0.5.tar.gz) or through my personal debian repository at <http://taquiones.net/files/debian/>.
+This plugin create the following CSS styles:
+
+* syntax
+* synComment
+* synConstant
+* syncIdentifier
+* synPreProc
+* synType
+* synSpecial
+* synUnderlined
+* synError
+* synTodo
+* synTitle
+
+It can be downloaded from [here](http://taquiones.net/files/misc/IkiWiki-Plugin-syntax-0.5.tar.gz) or through my personal debian repository at <http://taquiones.net/files/debian/>. There is a page with examples: <http://taquiones.net/software/syntax-examples.html>
 
 Any help, comments or critics are welcome at <victor@taquiones.net>.
 
