--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -30,6 +30,7 @@ Sites that are using ikiwiki include:
 * [betacantrips](http://www.betacantrips.com/), the personal website of Ethan Glasser-Camp
 * Keith Packard's [homepage](http://keithp.com/) and blog.
 * Christian Mock's [homepage](http://www.tahina.priv.at/).
+* Simon Raven IkiWiki [homepage](http://simonraven.nuit.ca/wiki/).
 
 Please feel free to add your own ikiwiki site!
 
