web commit by RecaiOktas: Text::VimColor Debian package

--- a/doc/plugins/contrib/syntax/discussion.mdwn
+++ b/doc/plugins/contrib/syntax/discussion.mdwn
@@ -12,3 +12,6 @@ limited to reading files inside the wiki source tree. If it's retained it
 should also add an appropriate dependency on the included file.
 
 --[[Joey]]
+
+> It looks like the author of Text::VimColor has already made a Debian package.  I've 
+> contacted him, but no answer back yet.  --[[Roktas]]
