--- a/doc/plugins/img.mdwn
+++ b/doc/plugins/img.mdwn
@@ -1,4 +1,4 @@
-[[template id=plugin name=img author="Christian Mock"]]
+[[template id=plugin name=img included=1 author="Christian Mock" ]]
 [[tag type/chrome]]
 
 This is an image handling plugin. While ikiwiki supports inlining full-size
