web commit by DavidMorenoGarza: Not my personal wiki, but the PM wiki

--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -8,7 +8,7 @@ Sites that are using ikiwiki include:
 * Ulrik's [small collection of small apps](http://www.student.lu.se/~cif04usv/wiki/)
 * [kite](http://kitenet.net)
 * [Bright Cloud](http://brightcloud.lcsee.wvu.edu/), a project of WVU LCSEE
-* [David Moreno Garza's personal wiki](http://anorak.com.ve/~damog/wiki)
+* [Perl Mongers México](http://www.pm.org.mx/)
 * [UK Software Patents info page](http://www.softwarepatents.co.uk/)
 * Paul Collins's [as-yet purposeless wiki](http://wiki.ondioline.org/)
 * Andre Luis Lopes's [personal website](http://www.andrelop.org/). Brazilian Portuguese only
