web commit by VictorMoral

--- a/doc/plugins/contrib/syntax/discussion.mdwn
+++ b/doc/plugins/contrib/syntax/discussion.mdwn
@@ -20,4 +20,4 @@ should also add an appropriate dependency on the included file.
 > It looks like the author of Text::VimColor has already made a Debian package.  I've 
 > contacted him, but no answer back yet.  --[[Roktas]]
 
->>Meanwhile i've got a debian package for Text::VimColor [[in my repository|http://taquiones.net/files/debian/]]. --[[VictorMoral]]
+>>Meanwhile i've got a debian package for Text::VimColor [in my repository](http://taquiones.net/files/debian/). --[[VictorMoral]]
